--- a/pages/creating-directory.mdx
+++ b/pages/creating-directory.mdx
@@ -5,6 +5,19 @@ description: "Learn how to create a new directory in DirectoryEasy"
 
 # Getting Started
 
+<div style={{ textAlign: 'center', margin: '2rem 0' }}>
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/_7NsLWSTjrs"
+    title="YouTube video player"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowFullScreen
+    style={{ maxWidth: '100%', borderRadius: '8px' }}
+  ></iframe>
+</div>
+
 After you sign in, head to : Directoryeasy.com/client/directories/new
 
 Create a Standard or Business directory in three steps: choose language, choose type, fill the form, and submit.
