--- a/pages/configuring-directory-email.mdx
+++ b/pages/configuring-directory-email.mdx
@@ -30,7 +30,20 @@ You'll need to connect your professional email address through an SMTP service.
 
 You can use Zoho Mail, which offers free professional email accounts, or any other SMTP provider you prefer.
 
-If you need help setting up Zoho Mail, check the video linked below for a quick tutorial.
+If you need help setting up Zoho Mail, check the video below for a quick tutorial on how to set up a free Zoho business email:
+
+<div style={{ textAlign: 'center', margin: '2rem 0' }}>
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/6C93iRe5l34"
+    title="How to Set Up Free Zoho Business Email"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowFullScreen
+    style={{ maxWidth: '100%', borderRadius: '8px' }}
+  ></iframe>
+</div>
 
 Once your email is ready, fill in the fields as follows:
 
@@ -44,3 +57,4 @@ Click **Save** to complete the setup.
 
 Your directory will now send emails using your own professional address, ensuring that both you and your members receive timely and branded notifications.
 
+up
