--- a/pages/managing-listings.mdx
+++ b/pages/managing-listings.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Managing Listings, Reviews, and Favorites"
-description: "Learn how members can submit reviews, favorite listings, and how to manage listing statuses, verification, and bulk operations"
+title: "Managing Listings: Reviews, Favorites, Status, Features & Import/Export"
+description: "Learn how members can submit reviews, favorite listings, and how to manage listing statuses, verification, featured placement, CSV import/export, and bulk operations"
 ---
 
-# Managing Listings, Reviews, and Favorites
+# Managing Listings
 
 <div style={{ textAlign: 'center', margin: '2rem 0' }}>
   <iframe
