--- a/index.mdx
+++ b/index.mdx
@@ -3,33 +3,104 @@ title: "DirectoryEasy"
 description: "Welcome to DirectoryEasy - Your comprehensive directory management solution"
 ---
 
-## Start here
+## Getting Started
 
-Get started with DirectoryEasy in just a few simple steps.
+DirectoryEasy is a powerful platform that helps you create, manage, and monetize online directories with ease. Follow our step-by-step guides to get up and running quickly.
 
-<Card
-  title="Create Directory"
-  icon="rocket"
-  href="/pages/creating-directory"
-  horizontal
->
-  Set up your directory in three simple steps: choose language, choose type, and fill the form.
-</Card>
+<CardGroup cols={2}>
+  <Card
+    title="Create Your Directory"
+    icon="rocket"
+    href="/pages/creating-directory"
+  >
+    Set up your directory in three simple steps: choose language, type, and fill the form.
+  </Card>
 
-<Card
-  title="Manage Listings"
-  icon="list"
-  href="/pages/listings"
-  horizontal
->
-  Learn how to manage listings in DirectoryEasy with our comprehensive guide.
-</Card>
+  <Card
+    title="Configure Email"
+    icon="envelope"
+    href="/pages/configuring-directory-email"
+  >
+    Set up email notifications to keep users informed about their listings.
+  </Card>
 
-<Card
-  title="Analytics Setup"
-  icon="chart-bar"
-  href="/pages/analytics"
-  horizontal
->
-  Complete guide for Google Analytics 4 API integration and setup.
-</Card>
+  <Card
+    title="Members Dashboard"
+    icon="users"
+    href="/pages/members-dashboard"
+  >
+    Understand how members interact with their listings and profile.
+  </Card>
+
+  <Card
+    title="Adding Listings"
+    icon="plus-circle"
+    href="/pages/adding-listings"
+  >
+    Learn how users can submit listings to your directory.
+  </Card>
+</CardGroup>
+
+## Core Features
+
+<CardGroup cols={2}>
+  <Card
+    title="Managing Listings"
+    icon="list-check"
+    href="/pages/managing-listings"
+  >
+    Review, approve, and manage all listings submitted to your directory.
+  </Card>
+
+  <Card
+    title="Automation"
+    icon="wand-magic-sparkles"
+    href="/pages/automation"
+  >
+    Set up automated workflows for publishing delays and featured listings.
+  </Card>
+
+  <Card
+    title="Tags & Monetization"
+    icon="tags"
+    href="/pages/tags-and-monetization"
+  >
+    Create subscription plans and monetize your directory effectively.
+  </Card>
+
+  <Card
+    title="Coming Soon"
+    icon="sparkles"
+    href="/pages/coming-soon"
+  >
+    Discover upcoming features and enhancements to DirectoryEasy.
+  </Card>
+</CardGroup>
+
+## Why DirectoryEasy?
+
+<AccordionGroup>
+  <Accordion title="Easy Setup" icon="rocket">
+    Create a fully functional directory in minutes with our intuitive setup wizard. No technical knowledge required.
+  </Accordion>
+
+  <Accordion title="Powerful Automation" icon="robot">
+    Save time with automated publishing delays and featured listing management based on subscription plans.
+  </Accordion>
+
+  <Accordion title="Monetization Ready" icon="dollar-sign">
+    Built-in subscription plans and featured listings help you generate revenue from day one.
+  </Accordion>
+
+  <Accordion title="User-Friendly" icon="heart">
+    Both directory owners and members enjoy a seamless, intuitive experience for managing content.
+  </Accordion>
+</AccordionGroup>
+
+## Need Help?
+
+Can't find what you're looking for? Start with our most popular guides:
+
+- **New to DirectoryEasy?** Begin with [Creating Your Directory](/pages/creating-directory)
+- **Want to automate listing management?** Check out [Automation](/pages/automation)
+- **Ready to monetize?** Explore [Tags & Monetization](/pages/tags-and-monetization)
