--- a/index.mdx
+++ b/index.mdx
@@ -17,6 +17,14 @@ DirectoryEasy is a powerful platform that helps you create, manage, and monetize
   </Card>
 
   <Card
+    title="Design Customization"
+    icon="palette"
+    href="/pages/design-customization"
+  >
+    Customize your directory's appearance with themes, colors, and layouts.
+  </Card>
+
+  <Card
     title="Configure Email"
     icon="envelope"
     href="/pages/configuring-directory-email"
