--- a/index.mdx
+++ b/index.mdx
@@ -25,6 +25,14 @@ DirectoryEasy is a powerful platform that helps you create, manage, and monetize
   </Card>
 
   <Card
+    title="Advanced Customization"
+    icon="code"
+    href="/pages/advanced-customization"
+  >
+    Add custom sections, scripts, and customize terminology for your niche.
+  </Card>
+
+  <Card
     title="Configure Email"
     icon="envelope"
     href="/pages/configuring-directory-email"
